# car

./: .gitattributes  .gitignore  NAVIGATION_TEB.md  car.sh  check_nav.sh  frames_2025-12-24_19.35.42.gv  gmapping.sh  nav-one.sh  nav.sh  nav_one.sh  save.sh  setup_teb.sh  teb_humble.repos  命令.txt
install/: local_setup.sh  setup.sh
install/encoder/lib/encoder/: encoder_imu_node  encoder_node  test
install/encoder/share/encoder/: package.sh  package.xml
install/hipnuc_imu/lib/hipnuc_imu/: imu_filter_node  listener  talker
install/hipnuc_imu/share/hipnuc_imu/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/lidar_tracking/lib/lidar_tracking/: lidar_tracking
install/lidar_tracking/share/lidar_tracking/: local_setup.dsv  package.bash  package.ps1  package.sh  package.zsh
install/lslidar_driver/lib/lslidar_driver/: lslidar_driver_node
install/lslidar_driver/share/lslidar_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/lslidar_msgs/share/lslidar_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/nav2_waypoint_cycle/lib/nav2_waypoint_cycle/: nav2_waypoint_cycle
install/nav2_waypoint_cycle/share/nav2_waypoint_cycle/: package.dsv  package.ps1  package.sh
install/odom_tf/share/odom_tf/: local_setup.sh  package.sh
install/openslam_gmapping/share/openslam_gmapping/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/python_myself/lib/python_myself/: drive  node1  node2  node2a  node2b  node2c  node2d  node3
install/python_myself/share/python_myself/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/racecar/lib/racecar/: bus_control.py  car_control_all  car_controller_new  car_test  cv_follow_node.py  detct.py  get  get.py  go.py  goal_l.py  laser_2d_new  line_follow.py  line_follow2.py  my_car_control_new  odom_key_debug.py  racecar_teleop.py  scan_node  zhuitong.py
install/racecar/share/racecar/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/racecar_twoloop/share/racecar_twoloop/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/racecar_twoloop/share/racecar_twoloop/launch/: car_go.launch.py
log/: latest_build
src/encoder/: setup.py
src/encoder/encoder/: encoder_node.py
src/hipnuc_imu/: CMakeLists.txt
src/hipnuc_imu/src/: imu_filter_node.cpp  serial_port copy.cpp  serial_port.cpp
src/lidar_tracking/: CMakeLists.txt
src/lidar_tracking/config/: params.yaml
src/lidar_tracking/include/: control.hpp
src/lidar_tracking/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/lidar_tracking/install/lidar_tracking/lib/lidar_tracking/: lidar_tracking
src/lidar_tracking/install/lidar_tracking/share/ament_index/resource_index/package_run_dependencies/: lidar_tracking
src/lidar_tracking/install/lidar_tracking/share/ament_index/resource_index/parent_prefix_path/: lidar_tracking
src/lidar_tracking/install/lidar_tracking/share/lidar_tracking/: package.dsv  package.sh
src/lidar_tracking/install/lidar_tracking/share/lidar_tracking/cmake/: lidar_trackingConfig.cmake
src/lidar_tracking/install/lidar_tracking/share/lidar_tracking/launch/: lidar_tracking.launch.py
src/lidar_tracking/src/: lidar_tracking.cpp
src/lslidar_driver/launch/: lslidar_launch.py
src/lslidar_driver/params/: lsx10.yaml  lsx10_1.yaml  lsx10_2.yaml
src/lslidar_driver/rviz/: nav2_default_view.rviz
src/python_myself/: package.xml  setup.cfg  setup.py
src/python_myself/launch/: node1.launch.py  node2.launch.py  node2a.launch.py  node2b.launch.py  node2c.launch.py  node2d.launch.py  node3.launch.py
src/python_myself/python_myself/: drive.py  node1.py  node1原.py  node2a.py  node2b.py  node2c.py  node2d.py  node2原.py  node3.py
src/racecar/: CMakeLists.txt  package.xml
src/racecar/.git-backup/: COMMIT_EDITMSG  ORIG_HEAD  config  index  packed-refs
src/racecar/.git-backup/logs/refs/heads/: main
src/racecar/.git-backup/logs/refs/remotes/origin/: HEAD
src/racecar/.git-backup/objects/pack/: pack-db05c95f8332dc8a017ba883afebeaeb297dd750.idx  pack-db05c95f8332dc8a017ba883afebeaeb297dd750.pack
src/racecar/.git-backup/refs/heads/: main
src/racecar/behavior_trees/: ackermann_navigate_through_poses.xml  ackermann_navigate_to_pose.xml
src/racecar/config/: ekf.yaml  nav_astar_teb.yaml
src/racecar/include/racecar/: control.hpp
src/racecar/launch/: Run_car.launch.py  Run_car_one.launch.py  Run_nav.launch.py  camer.launch.py  car_go.launch.py  ekf.launch.py  xunxian.launch.py
src/racecar/map/: ai_map.pgm  ai_map.yaml  test_map.pgm
src/racecar/rviz/: slam.rviz
src/racecar/scripts/: 1_1.py  1_2.py  ai_test.csv  ai_test1.csv  ai_test2.csv  ai_第一个点后回终点.py  bus_control.py  camer.py  cv_follow_node.py  detct copy.py  detct.py  get.py  go.py  hsv_show.py  line_follow.py  line_follow2.py  nav_cmd_adapter.py  odom_key_debug.py  racecar_teleop.py  zhuitong.py
src/racecar/scripts/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/racecar/src/: car_control_all.cpp  car_controller_new copy 2.cpp  car_controller_new copy.cpp  car_controller_new.cpp  car_test.cpp  car_test1.cpp  control.cpp  laser_2d_new.cpp  my_car_control_new.cpp  scan_node.cpp
src/racecar/urdf/: racecar.urdf
src/racecar_driver/: CMakeLists.txt  package.xml
src/racecar_driver/src/: racecar_driver_node.cpp  racecar_driver_node_one.cpp
src/slam_gmapping/config/: gmapping_params.yaml
src/slam_gmapping/launch/: slam_gmapping.launch.py  slam_gmapping_params.launch.py
src/slam_gmapping/src/: slam_gmapping.cpp
src/two_lap_control/: package.xml  setup.cfg  setup.py
src/two_lap_control/launch/: car_go.launch.py
src/two_lap_control/two_lap_control/: car_test_node.py  cv_follow_node.py
(+356 files in other folders)
