<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>racecar</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Package dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav2_amcl</depend>
  <depend>action_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_map_server</depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>encoder</exec_depend>
  <exec_depend>hipnuc_imu</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>lslidar_driver</exec_depend>
  <exec_depend>racecar_driver</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>slam_gmapping</exec_depend>
  <exec_depend>nav2_waypoint_cycle</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_smac_planner</exec_depend>
  <exec_depend>nav2_velocity_smoother</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export build type -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
