<?xml version="1.0"?>
<package format="3">
  <name>racecar_twoloop</name>
  <version>0.0.1</version>
  <description>Minimal package containing the CV and lidar controllers for the two-lap flow.</description>
  <maintainer email="noreply@example.com">racecar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
